--- a/package.json
+++ b/package.json
@@ -1,66 +1,66 @@
 {
-  "name": "remote",
-  "version": "0.1.0",
-  "private": true,
-  "dependencies": {
-    "@emotion/react": "^11.14.0",
-    "@emotion/styled": "^11.14.0",
-    "@fontsource/roboto": "^5.2.5",
-    "@mui/icons-material": "^7.0.1",
-    "@mui/material": "^7.0.1",
-    "@reduxjs/toolkit": "^2.6.1",
-    "@testing-library/dom": "^10.4.0",
-    "@testing-library/jest-dom": "^6.6.3",
-    "@testing-library/react": "^16.2.0",
-    "@testing-library/user-event": "^13.5.0",
-    "@types/jest": "^27.5.2",
-    "@types/node": "^16.18.126",
-    "@types/react": "^19.0.12",
-    "@types/react-dom": "^19.0.4",
-    "html-webpack-plugin": "^5.5.0",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "react-redux": "^9.2.0",
-    "react-scripts": "5.0.1",
-    "remote": "file:",
-    "ts-loader": "^9.2.3",
-    "typescript": "^4.9.5",
-    "web-vitals": "^2.1.4",
-    "webpack-dev-server": "^4.7.1"
-  },
-  "scripts": {
-    "start": "webpack serve --config webpack.config.js",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  },
-  "devDependencies": {
-    "autoprefixer": "^9.8.8",
-    "copy-webpack-plugin": "^13.0.0",
-    "css-loader": "^7.1.2",
-    "file-loader": "^6.2.0",
-    "postcss": "^7.0.39",
-    "style-loader": "^4.0.0",
-    "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.17",
-    "webpack": "^5.98.0",
-    "webpack-cli": "^6.0.1"
-  }
+    "name": "remote",
+    "version": "0.1.0",
+    "private": true,
+    "dependencies": {
+        "@emotion/react": "^11.14.0",
+        "@emotion/styled": "^11.14.0",
+        "@fontsource/roboto": "^5.2.5",
+        "@mui/icons-material": "^7.0.1",
+        "@mui/material": "^7.0.1",
+        "@reduxjs/toolkit": "^2.6.1",
+        "@testing-library/dom": "^10.4.0",
+        "@testing-library/jest-dom": "^6.6.3",
+        "@testing-library/react": "^16.2.0",
+        "@testing-library/user-event": "^13.5.0",
+        "@types/jest": "^27.5.2",
+        "@types/node": "^16.18.126",
+        "@types/react": "^19.0.12",
+        "@types/react-dom": "^19.0.4",
+        "html-webpack-plugin": "^5.5.0",
+        "react": "^19.0.0",
+        "react-dom": "^19.0.0",
+        "react-redux": "^9.2.0",
+        "react-scripts": "5.0.1",
+        "remote": "file:",
+        "ts-loader": "^9.2.3",
+        "typescript": "^4.9.5",
+        "web-vitals": "^2.1.4",
+        "webpack-dev-server": "^4.7.1"
+    },
+    "scripts": {
+        "start": "webpack serve --config webpack.config.js",
+        "build": "webpack build",
+        "test": "react-scripts test",
+        "eject": "react-scripts eject"
+    },
+    "eslintConfig": {
+        "extends": [
+            "react-app",
+            "react-app/jest"
+        ]
+    },
+    "browserslist": {
+        "production": [
+            ">0.2%",
+            "not dead",
+            "not op_mini all"
+        ],
+        "development": [
+            "last 1 chrome version",
+            "last 1 firefox version",
+            "last 1 safari version"
+        ]
+    },
+    "devDependencies": {
+        "autoprefixer": "^9.8.8",
+        "copy-webpack-plugin": "^13.0.0",
+        "css-loader": "^7.1.2",
+        "file-loader": "^6.2.0",
+        "postcss": "^7.0.39",
+        "style-loader": "^4.0.0",
+        "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.17",
+        "webpack": "^5.98.0",
+        "webpack-cli": "^6.0.1"
+    }
 }
