--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "scripts": {
         "start": "webpack serve --config webpack.config.js",
         "build": "webpack build",
-        "build:prod": "webpack build --config webpack.prod.config.js",
+        "build:prod": "webpack --config webpack.prod.js",
         "test": "react-scripts test",
         "eject": "react-scripts eject"
     },
