--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
         "start": "webpack serve --config webpack.config.js",
         "build": "webpack build",
         "build:prod": "webpack --config webpack.prod.js",
+        "start:prod": "webpack serve --config webpack.prod.js",
         "test": "react-scripts test",
         "eject": "react-scripts eject"
     },
