main.yaml file updated to generate prod build while deploying

--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -29,7 +29,7 @@ jobs:
         
     - name: Build
       run: |
-        npm run build
+        npm run build:prod
         
     - name: Configure AWS credentials
       uses: aws-actions/configure-aws-credentials@v1.7.0
